--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,5 +21,11 @@ tauri-build = { version = "2.3.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.7.0", features = [] }
 tauri-plugin-log = "2"
+tauri = { version = "2.7.0", features = [] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.52"
+windows-sys = { version = "0.59.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
